- Change budget - Add workaround signalR v8 issue - Change to ls service - Solve list overflow issue - Change file display approach - Fix signalR start connection - Fix User Profile CSS

--- a/src/app/UserProfile/user-profile.component.css
+++ b/src/app/UserProfile/user-profile.component.css
@@ -10,19 +10,22 @@
 }
 
 .user-profile-image nz-avatar {
-  margin-right: 10px;
-  border: 2px solid #fff; /* White border for the avatar */
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Subtle shadow for depth */
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #fff; 
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+  margin-bottom: 10px;
 }
 
 .user-profile-name h1 {
   margin: 0;
-  font-size: 16px; /* Adjust the font size as needed */
-  color: #333; /* Dark text color for readability */
-  font-weight: 500; /* Medium font weight */
-  white-space: nowrap; /* Prevents the name from wrapping */
-  overflow: hidden; /* Hide overflow */
-  text-overflow: ellipsis; /* Add ellipsis for long names */
+  font-size: 16px; 
+  color: #FFFFFF; 
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+  font-weight: 500; 
+  white-space: nowrap;
+  overflow: hidden; 
+  text-overflow: ellipsis; 
 }
 
 /* Modal content */
